criacao de um footer

--- a/index.html
+++ b/index.html
@@ -59,10 +59,47 @@
                     oportunidades, seus traumas e até mesmo a cor de sua pele. Mas está na hora de
                     assumir a responsabilidade sobre suas escolhas e começar a definir seu futuro por
                     meio de atitudes no presente</p>
+                    <p>Saber que seu futuro não está pré-determinado lhe dá outra perspectiva. A fé é
+                        o canal de comunicação que liga os seus pensamentos aos pensamentos de Deus.
+                        Assim, não há desespero na possibilidade de um futuro incerto. Você não precisa
+                        se preocupar com seu futuro ou com o dia de amanhã. Basta estar com essa
+                        conexão ativa e terá a direção correta para seguir. Quando age movido pela
+                        certeza, até o que era para dar errado, dá certo.
+                        É muito cômodo se prender ao que aconteceu no passado para justificar seus
+                        fracassos. Muitos culpam seus pais, seus avós, seus ex-patrões, a falta de
+                        oportunidades, seus traumas e até mesmo a cor de sua pele. Mas está na hora de
+                        assumir a responsabilidade sobre suas escolhas e começar a definir seu futuro por
+                        meio de atitudes no presente</p>
+                        <p>Saber que seu futuro não está pré-determinado lhe dá outra perspectiva. A fé é
+                            o canal de comunicação que liga os seus pensamentos aos pensamentos de Deus.
+                            Assim, não há desespero na possibilidade de um futuro incerto. Você não precisa
+                            se preocupar com seu futuro ou com o dia de amanhã. Basta estar com essa
+                            conexão ativa e terá a direção correta para seguir. Quando age movido pela
+                            certeza, até o que era para dar errado, dá certo.
+                            É muito cômodo se prender ao que aconteceu no passado para justificar seus
+                            fracassos. Muitos culpam seus pais, seus avós, seus ex-patrões, a falta de
+                            oportunidades, seus traumas e até mesmo a cor de sua pele. Mas está na hora de
+                            assumir a responsabilidade sobre suas escolhas e começar a definir seu futuro por
+                            meio de atitudes no presente</p>
+                            <p>Saber que seu futuro não está pré-determinado lhe dá outra perspectiva. A fé é
+                                o canal de comunicação que liga os seus pensamentos aos pensamentos de Deus.
+                                Assim, não há desespero na possibilidade de um futuro incerto. Você não precisa
+                                se preocupar com seu futuro ou com o dia de amanhã. Basta estar com essa
+                                conexão ativa e terá a direção correta para seguir. Quando age movido pela
+                                certeza, até o que era para dar errado, dá certo.
+                                É muito cômodo se prender ao que aconteceu no passado para justificar seus
+                                fracassos. Muitos culpam seus pais, seus avós, seus ex-patrões, a falta de
+                                oportunidades, seus traumas e até mesmo a cor de sua pele. Mas está na hora de
+                                assumir a responsabilidade sobre suas escolhas e começar a definir seu futuro por
+                                meio de atitudes no presente</p>
                 </div>
     
-            </section>    
+            </section>  
 
+ <div class="footer">
+    <p>© 2023 Galeria de tecnologia</p>
+    <a href="#top">Voltar ao topo</a>
+  </div>
 
 </body>
 </html>
